# ShawnAgent

./: .gitignore  README.md  context.md  笔记.md
learning-agent/: pyproject.toml
notebooks/: 学习路线.md  知识图谱.md  笔记.md  第1题-bigram计算.py  第2题-自注意力演示.py  第3题-BPE演示.py  第三章笔记-大语言模型基础+课后题答案.md
src/: pyproject.toml
src/ClassicAgent/: main.py
src/ReActAgent/: Plan_and_solve.py  ReAct.py  Reflection.py  Tools.py
src/gradio/: part1.py
src/httpapi/: main.py
src/langchain-agent/: .env.example  main.py  pyproject.toml
src/langchain/realworld-agent/: main.py  pyproject.toml
src/learning-agent/: .env.example  README.md  m01_first_agent.py  main.py
src/transformer/: main.py
src/transformer/Tokenization/: main.py
